--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <script language="javascript">
 function logout_check(){
     
-	   window.location = 'file:///C:/Users/Autolab/Desktop/login%20new.html';
+	   window.location = 'https://antony15935.github.io/e-ncku-login/';
 	
 
 }
