--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
   <title>E-Manufacturing website</title>
-<div style="background-color:#FFD382"><img src="school.png" id="n" width="80" height="80" alt=""><h1><b style="color:red; font-size:50px;" >National Cheng Kung University <> E-Manufacturing</b></h1></div>
+<div style="background-color:#FFD382"><img src="school.png" id="n" width="80" height="80" alt=""><h1><b style="color:red; font-size:50px;" >National Cheng Kung University <br> E-Manufacturing</b></h1></div>
 
 
 
