--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ function logout_check(){
 
 <div style="text-align:center">
 
-  <table  border="8" style="font-size:25px;font-family:serif;border-color:green;" cellpadding="5">
+  <table  border="8" style="font-size:25px;font-family:serif;border-color:black;" cellpadding="5">
     <caption><font face="標楷體"  color="blue" style="font-size:30px;"><b>Course Information</b></font></caption>
        <tr bgcolor="#FF8000">             <th>WEEK     <th>TIME	  <th>SUBJECT                                          <th>DATA
        <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>1  <td>2020/09     <td>e-Manufacturing & Industry 4.0 for the Semiconductor Industry	                      <td><a download="" href="https://drive.google.com/open?id=1gUwpv_uZrjFdu9Wl5Wan_hOglIACP6XM">video</a>
@@ -44,7 +44,7 @@ function logout_check(){
 </div>
 <br><br><br>
 
-<table border="8" style="font-size:25px;font-family:serif;border-color:green;" cellpadding="5">
+<table border="8" style="font-size:25px;font-family:serif;border-color:black;" cellpadding="5">
     <caption><font face="標楷體" color="blue" style="font-size:30px;"><b>Syllabus</b></font></caption>
        <tr bgcolor="#FF8000">             <th>WEEK     <th>TIME	  <th>SUBJECT                                          <th>DATA
        <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>1  <td>2020/09     <td>e-Manufacturing & Industry 4.0 for the Semiconductor Industry	                      <td><a download="" href="https://drive.google.com/open?id=1gUwpv_uZrjFdu9Wl5Wan_hOglIACP6XM">video</a>
@@ -61,7 +61,7 @@ function logout_check(){
   
   <br><br><br>
   
-  <table border="8" style="font-size:25px;font-family:serif;border-color:green;" cellpadding="5">
+  <table border="8" style="font-size:25px;font-family:serif;border-color:black;" cellpadding="5">
     <caption><font face="標楷體" color="blue" style="font-size:30px;"><b>Download</b></font></caption>
        <tr bgcolor="#FF8000">             <th>WEEK     <th>TIME	  <th>SUBJECT                                          <th>DATA
        <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>1  <td>2020/09     <td>e-Manufacturing & Industry 4.0 for the Semiconductor Industry	                      <td><a download="" href="https://drive.google.com/open?id=1gUwpv_uZrjFdu9Wl5Wan_hOglIACP6XM">video</a>
