--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@ function logout_check(){
 
 <table border="8" style="font-size:25px;font-family:serif;border-color:black;" cellpadding="5">
     <caption><font face="標楷體" color="blue" style="font-size:30px;"><b>Syllabus</b></font></caption>
-       <tr bgcolor="#FF8000">             <th>WEEK     <th>Progress                                 
-       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>1  <td>2020/09     <td>e-Manufacturing & Industry 4.0 for the Semiconductor Industry	                      <td>
-       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>2  <td>2020/09     <td>e-Manufacturing – Manufacturing Portion	                          <td>
-       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>3  <td>2020/09    <td>SECS I / SECS II  <td>
-       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>4  <td>2020/09     <td>SECS I / SECS II	        <td>
-       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>5   <td>2020/09     <td>GEM	                    <td>
-	     <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>6   <td>2020/09     <td>HSMS                     <td>
-		   <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>7   <td>2020/09    <td>Handout_OOT_and_UML(20191017)	                    <td>
-		     <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>8   <td>2020/09     <td>Fundamentals of Web Services(20191024)	                <td>
+       <tr bgcolor="#FF8000">             <th>WEEK   th>Time   <th>Progress                                 
+       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>1  <td>2020/09     <td>e-Manufacturing & Industry 4.0 for the Semiconductor Industry	                     
+       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>2  <td>2020/09     <td>e-Manufacturing – Manufacturing Portion	                         
+       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>3  <td>2020/09    <td>SECS I / SECS II  
+       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>4  <td>2020/09     <td>SECS I / SECS II	        
+       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>5   <td>2020/09     <td>GEM	                    
+	     <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>6   <td>2020/09     <td>HSMS                     
+		   <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>7   <td>2020/09    <td>Handout_OOT_and_UML(20191017)	                
+		     <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>8   <td>2020/09     <td>Fundamentals of Web Services(20191024)	                
 			   <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>9   <td>2020/09     <td>GEMG(20191031)	                     <td>
-			     <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>10   <td>2020/09     <td>Holonic Manufacturing Execution System	                     <td>
+			     <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>10   <td>2020/09     <td>Holonic Manufacturing Execution System	                  
   </table>
   
   <br><br><br>
