--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
@@ -30,50 +29,59 @@ function logout_check(){
   <table  border="8" style="font-size:25px;font-family:serif;border-color:black;" cellpadding="5">
     <caption><font face="標楷體"  color="blue" style="font-size:30px;"><b>Course Information</b></font></caption>
        <tr bgcolor="#FF8000">             <th>WEEK     <th>TIME	  <th>SUBJECT                                          <th>DATA
-       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>1  <td>2020/09     <td>e-Manufacturing & Industry 4.0 for the Semiconductor Industry	                      <td><a download="" href="https://drive.google.com/open?id=1gUwpv_uZrjFdu9Wl5Wan_hOglIACP6XM">video</a>
-       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>2  <td>2020/09     <td>e-Manufacturing – Manufacturing Portion	                          <td>
-       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>3  <td>2020/09    <td>SECS I / SECS II  <td>
-       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>4  <td>2020/09     <td>SECS I / SECS II	        <td>
-       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>5   <td>2020/09     <td>GEM	                    <td>
-	     <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>6   <td>2020/09     <td>HSMS                     <td>
-		   <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>7   <td>2020/09    <td>Handout_OOT_and_UML(20191017)	                    <td>
-		     <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>8   <td>2020/09     <td>Fundamentals of Web Services(20191024)	                <td>
-			   <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>9   <td>2020/09     <td>GEMG(20191031)	                     <td>
-			     <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>10   <td>2020/09     <td>Holonic Manufacturing Execution System	                     <td>
+       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>1  <td>2020/09/10     <td>e-Manufacturing & Industry 4.0 for the Semiconductor Industry	                      <td><a download="" href="https://drive.google.com/open?id=1gUwpv_uZrjFdu9Wl5Wan_hOglIACP6XM">video</a>
+       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>2  <td>2020/09/17     <td>e-Manufacturing – Manufacturing Portion	                          <td>
+       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>3  <td>2020/09/24    <td>SECS I / SECS II  <td>
+       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>4   <td>2020/10/08     <td>GEM & HSMS                    <td>
+
+				          
   </table>
 </div>
 <br><br><br>
 
 <table border="8" style="font-size:25px;font-family:serif;border-color:black;" cellpadding="5">
     <caption><font face="標楷體" color="blue" style="font-size:30px;"><b>Syllabus</b></font></caption>
-       <tr bgcolor="#FF8000">             <th>WEEK   <th>Time   <th>Progress                                 
-       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>1  <td>2020/09     <td>e-Manufacturing & Industry 4.0 for the Semiconductor Industry	                     
-       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>2  <td>2020/09     <td>e-Manufacturing – Manufacturing Portion	                         
-       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>3  <td>2020/09    <td>SECS I / SECS II  
-       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>4  <td>2020/09     <td>SECS I / SECS II	        
-       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>5   <td>2020/09     <td>GEM	                    
-	     <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>6   <td>2020/09     <td>HSMS                     
-		   <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>7   <td>2020/09    <td>Handout_OOT_and_UML(20191017)	                
-		     <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>8   <td>2020/09     <td>Fundamentals of Web Services(20191024)	                
-			   <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>9   <td>2020/09     <td>GEMG(20191031)	                     
-			     <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>10   <td>2020/09     <td>Holonic Manufacturing Execution System	                  
+       <tr bgcolor="#FF8000">             <th>WEEK   <th>Time   <th>Progress                                                                      
+       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>1  <td>2020/09/10     <td>e-Manufacturing & Industry 4.0 for the Semiconductor Industry	                     
+       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>2  <td>2020/09/17     <td>e-Manufacturing – Manufacturing Portion	                          
+       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>3  <td>2020/09/24    <td>SECS I / SECS II  
+       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>4  <td>2020/10/01     <td>Holiday	        
+       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>5   <td>2020/10/08     <td>GEM & HSMS                  
+	     <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>6   <td>2020/10/15     <td>Overview of Object Technology & UML [Duke]                                       
+		   <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>7   <td>2020/10/22    <td> Generic Equipment Manager (GEMG)                                        
+		     <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>8   <td>2020/10/29     <td>Fundamentals of Web Services [Duke]     
+			   <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>9   <td>2020/11/05     <td>Midterm	                   
+			     <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>10   <td>2020/11/12     <td>Holonic Manufacturing Execution System	                 
+				  <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>11   <td>2020/11/19     <td>Holonic Supply Chain System	                    
+				   <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>12   <td>2020/11/26     <td>HEngineering Chain Management System &  Interface A (EDA) Stds	 
+				    <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>13   <td>2020/12/03     <td> Fundamentals of Cloud Computing & MSACS [Duke]	                        
+					 <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>14   <td>2020/12/10     <td>Automatic Virtual Metrology (AVM)	                    
+					  <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>15   <td>2020/12/17     <td>AMCoT & Industry 4.1	                    
+					    <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>16   <td>2020/12/24     <td>Docker Container & Kubernetes [Hung]                     
+						  <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>17   <td>2020/12/24     <td>Rapid Construction Scheme of Intelligent                     
+						 <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>17   <td>2020/12/24     <td>Manufacturing Edge Device based on Container                      
+                          <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>17   <td>2020/12/24     <td>Technologies & Containerized AVM [Hung]                   
+						 <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>18   <td>2020/12/31     <td>Final	                          
   </table>
   
   <br><br><br>
   
   <table border="8" style="font-size:25px;font-family:serif;border-color:black;" cellpadding="5">
     <caption><font face="標楷體" color="blue" style="font-size:30px;"><b>Download</b></font></caption>
-       <tr bgcolor="#FF8000">             <th>WEEK     <th>TIME	  <th>SUBJECT                                          <th>DATA
-       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>1  <td>2020/09     <td>e-Manufacturing & Industry 4.0 for the Semiconductor Industry	                      <td><a href="1. e-Manufacturing & Industry 4 0 for the Semiconductor Industry (20170918).pdf">download</a>
-       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>2  <td>2020/09     <td>e-Manufacturing – Manufacturing Portion	                          <td>
-       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>3  <td>2020/09    <td>SECS I / SECS II  <td>
-       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>4  <td>2020/09     <td>SECS I / SECS II	        <td>
-       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>5   <td>2020/09     <td>GEM	                    <td>
-	     <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>6   <td>2020/09     <td>HSMS                     <td>
-		   <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>7   <td>2020/09    <td>Handout_OOT_and_UML(20191017)	                    <td>
-		     <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>8   <td>2020/09     <td>Fundamentals of Web Services(20191024)	                <td>
-			   <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>9   <td>2020/09     <td>GEMG(20191031)	                     <td>
-			     <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>10   <td>2020/09     <td>Holonic Manufacturing Execution System	                     <td>
+       <tr bgcolor="#FF8000">                 	  <th>SUBJECT                                          <th>DATA
+       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                                  <td>e-Manufacturing & Industry 4.0 for the Semiconductor Industry	                      <td><a href="1. e-Manufacturing & Industry 4 0 for the Semiconductor Industry (20170918).pdf">download</a>
+       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                                   <td>e-Manufacturing – Manufacturing Portion	                          <td><a href="2. e-Manufacturing – Manufacturing Portion (動畫) 20150921.pdf">download</a> 
+       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                                  <td>SECS I / SECS II  <td> <a href="3. SECS I & SECS II.pdf">download</a> 
+       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                                  <td>GEM	        <td><a href="4. GEM.pdf">download</a> 
+       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                                   <td>HSMS	                    <td>  <a href="5. HSMS.pdf">download</a> 
+	     <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                                   <td>GEMG(for handout)	                     <td>  <a href="7. GEMG (for  handout).pdf">download</a> 
+		   <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                                  <td>HMES	                    <td>  <a href="9. HMES.pdf">download</a> 
+		     <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                               <td>HSCS (HICS & HIES)               <td>  <a href="10. HSCS (HICS & HIES).pdf">download</a> 
+			   <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                                  <td>ECMS_09112007                     <td>  <a href="11. ECMS_09112007.pdf">download</a> 
+			     <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                               <td>Interface A (EDA) Standards for Handouts (20100914 NEW)                   <td>  <a href="12. Interface A (EDA) Standards for Handouts (20100914 NEW).pdf">download</a> 
+				   <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                               <td>AVM for Various Intelligent Manufacturing Applications (20150908)  <td>  <a href="14. AVM for Various Intelligent Manufacturing Applications (20150908).pdf">download</a> 
+				     <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                               <td>AMCoT & Industry 4.1 20170918  <td>  <a href="15. AMCoT & Industry 4.1 20170918.pdf">download</a> 
+					   <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                               <td>E化製造- 2020 英文版 (20200910) <td>  <a href="E化製造- 2020 英文版 (20200910).pdf">download</a> 
   </table>
 
 
