--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
-  <title>E-Manufacturing website</title>
+  <title>e-Manufacturing website</title>
 <div style="background-color:#FFD382"><img src="school.png" id="n" width="80" height="80" alt=""><h1><b style="color:red; font-size:50px;" >National Cheng Kung University <br> E-Manufacturing</b></h1></div>
 
 
