--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ function logout_check(){
     <caption><font face="標楷體"  color="blue" style="font-size:30px;"><b>Course Information</b></font></caption>
        <tr bgcolor="#FF8000">             <th>WEEK     <th>TIME	  <th>SUBJECT                                          <th>DATA
        <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>1  <td>2020/09/10     <td>e-Manufacturing & Industry 4.0 for the Semiconductor Industry	                      <td><a download="" href="https://drive.google.com/file/d/1W1xRt2ngPg4bB-irux5OWqEqmdJaN5IG/view?usp=sharing">video</a>
-       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>2  <td>2020/09/17     <td>e-Manufacturing – Manufacturing Portion	                          <td>
-       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>3  <td>2020/09/24    <td>SECS I / SECS II  <td>
+       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>2  <td>2020/09/17     <td>e-Manufacturing – Manufacturing Portion, SECS I	                          <td><a download="" href="https://drive.google.com/file/d/1TnunffMgT4kAzarBSSWXKjy2FkfsY0DA/view?usp=sharing">video1</a> <a download="" href="https://drive.google.com/file/d/1v83AUB4Sp16K3va-EHJFL9XWE6-JZ2kf/view?usp=sharing">video2</a>
+       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>3  <td>2020/09/24    <td>SECS II  <td>
        <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>4   <td>2020/10/08     <td>GEM & HSMS                    <td>
 
 				          
@@ -43,8 +43,8 @@ function logout_check(){
     <caption><font face="標楷體" color="blue" style="font-size:30px;"><b>Syllabus</b></font></caption>
        <tr bgcolor="#FF8000">             <th>WEEK   <th>Time   <th>Progress                                                                      
        <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>1  <td>2020/09/10     <td>e-Manufacturing & Industry 4.0 for the Semiconductor Industry	                     
-       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>2  <td>2020/09/17     <td>e-Manufacturing – Manufacturing Portion	                          
-       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>3  <td>2020/09/24    <td>SECS I / SECS II  
+       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>2  <td>2020/09/17     <td>e-Manufacturing – Manufacturing Portion, SECS I 	                          
+       <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>3  <td>2020/09/24    <td>SECS II  
        <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>4  <td>2020/10/01     <td>Holiday	        
        <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>5   <td>2020/10/08     <td>GEM & HSMS                  
 	     <tr onMouseOver="this.style.backgroundColor='#33FF33';" onMouseOut="this.style.backgroundColor='#FFFFDF';">                                              <td>6   <td>2020/10/15     <td>Overview of Object Technology & UML [Duke]                                       
